feat: add redis cache for system