@@ -9,10 +9,13 @@ import com.sidocinemas.cinema_booking.repository.GenreRepository;
 import com.sidocinemas.cinema_booking.service.GenreService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -22,13 +25,15 @@ public class GenreServiceImpl implements GenreService {
     private final GenreRepository genreRepository;
 
     @Override
+    @Cacheable(value = "genres", key = "'all'")
     public List<GenreResponse> getAllGenres() {
         return genreRepository.findAll().stream()
                 .map(this::mapToResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
+    @Cacheable(value = "genres", key = "#id")
     public GenreResponse getGenreById(Long id) {
         Genre genre = genreRepository.findById(id)
                 .orElseThrow(() -> new AppException(ErrorCode.GENRE_NOT_FOUND));
@@ -37,6 +42,7 @@ public class GenreServiceImpl implements GenreService {
 
     @Override
     @Transactional
+    @CacheEvict(value = "genres", allEntries = true)
     public GenreResponse createGenre(GenreRequest request) {
         if (genreRepository.existsByNameIgnoreCase(request.getName())) {
             throw new AppException(ErrorCode.GENRE_ALREADY_EXISTS);
@@ -50,6 +56,7 @@ public class GenreServiceImpl implements GenreService {
 
     @Override
     @Transactional
+    @CacheEvict(value = "genres", allEntries = true)
     public GenreResponse updateGenre(Long id, GenreRequest request) {
         Genre genre = genreRepository.findById(id)
                 .orElseThrow(() -> new AppException(ErrorCode.GENRE_NOT_FOUND));
@@ -69,6 +76,7 @@ public class GenreServiceImpl implements GenreService {
 
     @Override
     @Transactional
+    @CacheEvict(value = "genres", allEntries = true)
     public void deleteGenre(Long id) {
         Genre genre = genreRepository.findById(id)
                 .orElseThrow(() -> new AppException(ErrorCode.GENRE_NOT_FOUND));
